SET(LIBRARY_OUTPUT_PATH ${CPP_LIBRARY_OUTPUT_PATH})

FILE( GLOB ANTIMONYEDITOR_HDRS *.h )
FILE( GLOB ANTIMONYEDITOR_SRC *.cpp )

QT4_WRAP_CPP( ANTIMONYEDITOR_MOC ${ANTYMONYEDITOR_HDRS} )

ADD_LIBRARY( AntimonyEditor
  SHARED
  ${ANTIMONYEDITOR_MOC}
  ${ANTIMONYEDITOR_SRC}
  )

TARGET_LINK_LIBRARIES( AntimonyEditor
  AntimonyEditor
  antimony
  DataBasicTools
  TinkerCellCore
)
