FILE( GLOB CONTAINERTOOLS_HDRS *.h )
FILE( GLOB CONTAINERTOOLS_SRC *.cpp )

QT4_WRAP_CPP( CONTAINERTOOLS_MOC ${CONTAINERTOOLS_HDRS} )
 
ADD_LIBRARY( ContainerPlugin
  SHARED
  ${CONTAINERTOOLS_SRC}
  ${CONTAINERTOOLS_MOC}
)

TARGET_LINK_LIBRARIES( ContainerPlugin
  ContainerPlugin
  TinkerCellCore
)
